Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/Staging_Job_Role__c.object-meta.xml
<CustomObject>
    <label>Staging Job Role</label>
    <nameField>
        <label>Staging Job Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staging Job Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>