Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Staging Job Roles</relationshipLabel>
    <relationshipName>Staging_Job_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>