Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Age_18_or_Over__c.field-meta.xml
<CustomField>
    <fullName>Age_18_or_Over__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Age 18 or Over</label>
    <type>Checkbox</type>
</CustomField>