Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Bank_Holiday_Charge_Rate__c.field-meta.xml
<CustomField>
    <fullName>Bank_Holiday_Charge_Rate__c</fullName>
    <label>Bank Holiday Charge Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>