Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Bank_Holiday_Rates_StartEnd_Hour__c.field-meta.xml
<CustomField>
    <fullName>Bank_Holiday_Rates_StartEnd_Hour__c</fullName>
    <label>Bank Holiday Rates Start/End Hour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>