Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Break_Definition_Name__c.field-meta.xml
<CustomField>
    <fullName>Break_Definition_Name__c</fullName>
    <label>Break Definition Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>