Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Break_Length__c.field-meta.xml
<CustomField>
    <fullName>Break_Length__c</fullName>
    <label>Break Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>