Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Staging Job Roles</relationshipLabel>
    <relationshipName>Staging_Job_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>