Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Candidate_Rates__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Rates__c</fullName>
    <label>Candidate Rates</label>
    <type>TextArea</type>
</CustomField>