Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Competency__c.field-meta.xml
<CustomField>
    <fullName>Competency__c</fullName>
    <label>Competency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DBS Basic</fullName>
            </value>
            <value>
                <fullName>DBS Enhanced: Adult Workforce</fullName>
            </value>
            <value>
                <fullName>DBS Enhanced: Child &amp; Adult Workforce</fullName>
            </value>
            <value>
                <fullName>DBS Enhanced: Child Workforce</fullName>
            </value>
            <value>
                <fullName>DBS - Standard Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>