Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Daily_Overtime_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Daily_Overtime_Threshold__c</fullName>
    <label>Daily Overtime Threshold</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>