Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Date_Request_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Request_Submitted__c</fullName>
    <label>Date Request Submitted</label>
    <type>DateTime</type>
</CustomField>