Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Date_Required__c.field-meta.xml
<CustomField>
    <fullName>Date_Required__c</fullName>
    <inlineHelpText>Date by when the new rates are required</inlineHelpText>
    <label>Date Required</label>
    <type>Date</type>
</CustomField>