Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Hours_After_Shift_Start__c.field-meta.xml
<CustomField>
    <fullName>Hours_After_Shift_Start__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Hours After Shift Start</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>