Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <label>Job Role Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>