Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Job_Role_Link__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Role</label>
    <referenceTo>sirenum__Team__c</referenceTo>
    <relationshipLabel>Staging Job Roles</relationshipLabel>
    <relationshipName>Staging_Job_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>