Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Type</label>
    <referenceTo>sirenum__Job_Type__c</referenceTo>
    <relationshipLabel>Staging Job Roles</relationshipLabel>
    <relationshipName>Staging_Job_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>