Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Minimum_Shift_Length__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Shift_Length__c</fullName>
    <label>Minimum Shift Length</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>