Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Notified_Health_Safety_Risks__c.field-meta.xml
<CustomField>
    <fullName>Notified_Health_Safety_Risks__c</fullName>
    <label>Notified Health &amp; Safety Risks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>