Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Other_Competency__c.field-meta.xml
<CustomField>
    <fullName>Other_Competency__c</fullName>
    <label>Other Competency</label>
    <type>TextArea</type>
</CustomField>