Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Overtime_Charge_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Charge_Rate__c</fullName>
    <label>Overtime Charge Rate</label>
    <type>TextArea</type>
</CustomField>