Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Personal_Protective_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Personal_Protective_Equipment__c</fullName>
    <label>Personal Protective Equipment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>