Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Post_AWR__c.field-meta.xml
<CustomField>
    <fullName>Post_AWR__c</fullName>
    <label>Post AWR Holiday Entitlement</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>