Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Post_AWR_Charge_Rate__c.field-meta.xml
<CustomField>
    <fullName>Post_AWR_Charge_Rate__c</fullName>
    <label>Post AWR Charge Rate</label>
    <type>TextArea</type>
</CustomField>