Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Pre_AWR_Charge_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pre_AWR_Charge_Rate__c</fullName>
    <label>Pre AWR Charge Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>