Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Pre_AWR_Holiday_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Pre_AWR_Holiday_Entitlement__c</fullName>
    <defaultValue>28</defaultValue>
    <label>Pre AWR Holiday Entitlement</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>