Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Card</label>
    <referenceTo>sirenum__Rate_Card__c</referenceTo>
    <relationshipLabel>Staging Job Roles</relationshipLabel>
    <relationshipName>Staging_Job_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>