Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Rates_valid_from_date__c.field-meta.xml
<CustomField>
    <fullName>Rates_valid_from_date__c</fullName>
    <label>Rates valid from date</label>
    <type>Date</type>
</CustomField>