Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason (Old)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>