Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Rejection_Reason_New__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason_New__c</fullName>
    <label>Rejection Reason</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>