Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Saturday_Night_Rates_StartEnd_Hour__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Night_Rates_StartEnd_Hour__c</fullName>
    <label>Saturday Night Rates Start/End Hour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>