Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Saturday_Night_time_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Night_time_Pay_Rate__c</fullName>
    <label>Saturday Night time Pay Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>