Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Saturday_Overtime_Charge_Rate__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Overtime_Charge_Rate__c</fullName>
    <label>Saturday Overtime Charge Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>