Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sector</label>
    <referenceTo>sirenum__Rota__c</referenceTo>
    <relationshipLabel>Staging Job Roles</relationshipLabel>
    <relationshipName>Staging_Job_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>