Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Shift_Time_Two__c.field-meta.xml
<CustomField>
    <fullName>Shift_Time_Two__c</fullName>
    <label>Shift Time Two</label>
    <length>255</length>
    <type>Text</type>
</CustomField>