Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Sirenum_Contract__c.field-meta.xml
<CustomField>
    <fullName>Sirenum_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sirenum Contract</label>
    <referenceTo>sirenum__ProActiveContract__c</referenceTo>
    <relationshipLabel>Staging Job Roles</relationshipLabel>
    <relationshipName>Staging_Job_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>