Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Special_Induction__c.field-meta.xml
<CustomField>
    <fullName>Special_Induction__c</fullName>
    <label>Special Induction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>