Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Standard_Night_time_Charge_Rate__c.field-meta.xml
<CustomField>
    <fullName>Standard_Night_time_Charge_Rate__c</fullName>
    <label>Standard Night time Charge Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>