Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Standard_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Standard_Pay_Rate__c</fullName>
    <label>Standard Pay Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>