Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Start_End_Hour_Overtime__c.field-meta.xml
<CustomField>
    <fullName>Start_End_Hour_Overtime__c</fullName>
    <label>Start/End Hour (Overtime)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>