Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Sunday_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Pay_Rate__c</fullName>
    <label>Sunday Pay Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>