Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Sunday_StartEnd_Hour__c.field-meta.xml
<CustomField>
    <fullName>Sunday_StartEnd_Hour__c</fullName>
    <label>Sunday Start/End Hour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>