Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Weekend_StartEnd_Hour__c.field-meta.xml
<CustomField>
    <fullName>Weekend_StartEnd_Hour__c</fullName>
    <label>Weekend Start/End Hour</label>
    <type>TextArea</type>
</CustomField>