Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/fields/Weekly_Overtime_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Overtime_Threshold__c</fullName>
    <label>Weekly Overtime Threshold</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>