Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/recordTypes/Job_Role.recordType-meta.xml
<RecordType>
    <fullName>Job_Role</fullName>
    <active>true</active>
    <label>Job Role</label>
</RecordType>