Frankbelford/uatv1ba/force-app/main/default/objects/Staging_Job_Role__c/recordTypes/Rates.recordType-meta.xml
<RecordType>
    <fullName>Rates</fullName>
    <active>true</active>
    <label>Rates</label>
</RecordType>